// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormHelper <CustomField /> matches snapshot when placeholder falls back to defaultMessage when translations key does not exist 1`] = `
<div
  className="fyjcn3x"
>
  <FormattedMessage
    defaultMessage="Username"
    id="username"
    values={Object {}}
  />
  <div>
    <input
      className="f17g2th6"
      placeholder="Username"
      type="text"
    />
  </div>
</div>
`;

exports[`FormHelper <CustomField /> matches snapshot with error when active or touched 1`] = `
<div
  className="fyjcn3x"
>
  <FormattedMessage
    defaultMessage="Username"
    id="username"
    values={Object {}}
  />
  <div>
    <input
      className="f17g2th6"
      placeholder="Username"
      type="text"
    />
    <div
      className="f1w4o4fu"
    >
      <span
        className="f1jvcvsh"
      >
        <FormattedMessage
          defaultMessage="some error occurs"
          id="error"
          values={Object {}}
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`FormHelper <CustomField /> matches snapshot with warning when active or touched 1`] = `
<div
  className="fyjcn3x"
>
  <FormattedMessage
    defaultMessage="Username"
    id="username"
    values={Object {}}
  />
  <div>
    <input
      className="f17g2th6"
      placeholder="Username"
      type="text"
    />
    <div
      className="f1w4o4fu"
    >
      <span
        className="fr6gy5q"
      >
        <FormattedMessage
          defaultMessage="something needs to be warned"
          id="warning"
          values={Object {}}
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`FormHelper <CustomField /> matches snapshot without error and warning 1`] = `
<div
  className="fyjcn3x"
>
  <FormattedMessage
    defaultMessage="Username"
    id="username"
    values={Object {}}
  />
  <div>
    <input
      className="f17g2th6"
      placeholder="Username"
      type="text"
    />
  </div>
</div>
`;
